# kr

./: .gitignore  IBController_sav.ini  Makefile  README.md  corr4.py  ibrun.sh  launch.py  pystring.h  pyutil.h  rig  sync.sh  tpib.sh
mts/: CMakeLists.txt
mts/algo/: AlgoBase.cpp  AlgoBase.h  AlgoThread.cpp  AlgoThread.h  CMakeLists.txt  ThreadMain.cpp
mts/algo/sim/: AlgoThreadMock.h  CMakeLists.txt  StratSim.cpp  StratSim.h
mts/algo/strat/: AR1.cpp  AR1.h
mts/algo/test/: test_base.cpp  test_idbo.cpp
mts/ar1_pyres/: LiveHO-INTRADAY_MTS_AR1_WTI_US.cfg  Outliers.py  TraceInverse.py  ar1_MODEL  ar1_ens_MODEL.py  ar1_ens_model.py  ar1_eval.py  ar1_md.py  ar1_model.py  ar1_model_org.py  ar1_model_save.py  ar1_sim.py  exp_fit.py  forecast.py  jan_d1.py  ni_pick.py  vbsind.py  vol_bucket.py
mts/config/: bpipe.cfg  ftrader1.cfg  ftrader2.cfg  main.cfg.prod  main.cfg.uat  risk.cfg  risk.cfg.prd  risk.cfg.uat  strat.cfg  symbol_map.cfg  test.cfg  twap_all.cfg  venue_map.cfg
mts/config/bpipe/: 7DD2EBAC88F8A3A3EE745C915C33A99E.pk12  rootCertificate.pk7
mts/config/legacy/: TT-FIX44.xml  currency.xml  dropcopy_TT.xml  engine.xml  exch_TT.xml  exch_TT_prod.xml  exch_TT_uat.xml  feed_TT.xml  feed_TT_prod.xml  feed_TT_uat.xml  fix_config.txt  fix_dropcopy_config.txt  provider.xml  risk_limits.xml  simulation.xml
mts/config/risk/: risk.json  trading_status.csv  vs_5_15_60m.csv
mts/config/sim/: main.cfg.template  strat.cfg  symbol_map.cfg  venue_map.cfg
mts/config/strat/: cl001.cfg  es001.cfg  hics_calh_t15_tsc.cfg  hics_calh_tsc.cfg  idbo_tf_tsc.cfg  idbo_tf_v2_tsc.cfg
mts/config/symbol/: assets.xml  calendars  fx_1700.txt  holiroll.dill  roll_details  upload
mts/md/: CMakeLists.txt  md_bar.h  md_snap.h  snap_reader.cpp  td_parser.cpp  td_parser.h  tp_parser.h
mts/md/py/: setup.py  td_parser_np.cpp
mts/md/test/: CMakeLists.txt  bar_test.csv  bar_writer.cpp  br_test.cpp  l1_pub.cpp
mts/pm/: CMakeLists.txt  ExecutionReport.cpp  ExecutionReport.h  ExecutionTrader.h  FloorBase.h  FloorCPR.h  FloorManager.cpp  FloorManager.h  FloorManagerMain.cpp  FloorTrader.cpp  FloorTrader.h  FloorTraderMain.cpp  PositionData.cpp  PositionData.h  PositionManager.cpp  PositionManager.h  RiskManager.cpp  RiskManager.h  RiskMonitor.cpp  RiskMonitor.h  TPClient.h  TWAPTrader.cpp  TWAPTrader.h  exch_mock.cpp  floorpoke.cpp  flr.cpp  flr.h
mts/pm/recovery/: 20201112-11:44:02_20201112-11:45:17.703_replay.csv  20201112-11:45:19_20201112-11:49:08.528_replay.csv  20201112-11:45:19_20201112-11:54:31.878_replay.csv  eod_pos.csv  fills.csv
mts/pm/test/: CMakeLists.txt  er_test.cpp  idp_test.cpp  pm_test.cpp  risk_test.cpp
mts/python/: bp_run  daily_update.py  daily_update_prod.py  daily_update_uat.py  hics_calh  idbo_tf.py  launch.py  mts_liquidity.py  mts_log_beep  mts_mtm_pnl.py  mts_pnl  mts_repo.py  mts_run  mts_run.sh  mts_util.py  strat_sim.py  strat_utils.py  symbol_map.py  symbol_map_org.py  sys_util.py  td2mts.py  tickdata_parser.py  tpmon.py
mts/python/strategy/: hics.py  hics_calh  idbo_MODEL  idbo_MODEL_HV  idbo_MODEL_HV_tactical  idbo_MODEL_LV  idbo_MODEL_LV_tactical  idbo_MODEL_tactical  idbo_ens.py  idbo_model.py  idbo_tactical_wt.csv  idbo_tf.py
mts/tp/: CMakeLists.txt
mts/tp/bpipe/: CMakeLists.txt  bbmain.cpp  bbtp.cpp  bbtp.h  bbtp_test.cpp
mts/tp/cpp/: CAlgorithm.cpp  CAlgorithmFIXTest.cpp  CAlgorithmFactory.cpp  CAlgorithmTemplate.cpp  CApplication.cpp  CApplicationLog.cpp  CBidAsk.cpp  CCircCharBuffer.cpp  CCircularScalarBuffer.cpp  CConfig.cpp  CConsolidatedPositionManager.cpp  CCurrncy.cpp  CDateTime.cpp  CDropCopyFIX_TT.cpp  CDropCopyRecovery.cpp  CEmailer.cpp  CEngine.cpp  CEvent.cpp  CEventQueue.cpp  CExchange.cpp  CExchangeBroker.cpp  CExchangeFIX_TT.cpp  CExchangeFactory.cpp  CExchangeRecovery.cpp  CExecReport.cpp  CFIXEngine.cpp  CFeed.cpp  CFeedEnginePersistedTOB.cpp  CFeedFIX_TT.cpp  CFeedFactory.cpp  CFeedManager.cpp  CFeedTickDataTOB.cpp  CFileUtil.cpp  CHeartbeat.cpp  CKeyValue.cpp  CLog.cpp  CLogBinary.cpp  CLogBinaryBuffered.cpp  CLogText.cpp  CLogUnorderedMap.cpp  (+27 more)
mts/tp/include/: CAlgorithm.h  CAlgorithm.hxx  CAlgorithmCommand.hxx  CAlgorithmFIXTest.h  CAlgorithmFactory.h  CAlgorithmTemplate.h  CApplication.h  CApplicationLog.h  CBidAsk.h  CCircCharBuffer.h  CCircCharBuffer.hxx  CCircularBuffer.h  CCircularBuffer.hxx  CCircularScalarBuffer.h  CConfig.h  CConsolidatedPositionManager.h  CCurrncy.h  CDateTime.h  CDateTime.hxx  CDateTimeEvent.h  CDateTimeEvent.hxx  CDateTimeLessThan.h  CDoubleEqualTo.h  CDoubleGreaterThan.h  CDropCopyFIX_TT.h  CDropCopyRecovery.hxx  CEmailer.h  CEngine.h  CEvent.h  CEventQueue.h  CEventQueue.hxx  CExchange.h  CExchangeBroker.h  CExchangeFIX_TT.h  CExchangeFactory.h  CExchangeRecovery.h  CExecReport.h  CExecReport.hxx  CFIXEngine.h  CFeed.h  (+73 more)
mts/tp/python/: models.py  state_break.py
mts/util/: CMakeLists.txt  TraderBase.h  async_io.h  async_io_test.cpp  circular_buffer.h  csv_util.h  floor.h  instance_limiter.h  queue.h  rate_estimator.cpp  rate_estimator.h  rate_limiter.cpp  rate_limiter.h  symbol_map.cpp  symbol_map.h  thread_utils.h  time_util.cpp  time_util.h
mts/util/plcc/: ConfigUtil.cpp  ConfigureReader.cpp  ConfigureReader.hpp  JsonUtil.cpp  Logger.hpp  PLCC.cpp  PLCC.hpp
mts/util/test/: CMakeLists.txt  cfg_reader.cpp  config_test.cpp  csv_test.cpp  onlyme.cpp  plcc_test.cpp  qtest_malloc.cpp  rate_test.cpp  symbol_map_test.cpp  test_shared.cpp  thread_test.cpp  time_test.cpp
src/algo/: .AlgoBase.h.swp  AlgoBase.cpp  AlgoBase.h  AlgoClient.h  AlgoThread.cpp  AlgoThread.h  CMakeLists.txt  ThreadMain.cpp
src/algo/strat/: AR1.cpp  AR1.h
src/algo/test/: test_base.cpp
src/md/: CMakeLists.txt  bar_reader.cpp  md_bar.h  md_bar_writer.cpp  md_snap.h  snap_reader.cpp
src/md/test/: CMakeLists.txt  bar_writer.cpp  br_test.cpp  l1_pub.cpp
src/pm/: CMakeLists.txt  ExecutionReport.cpp  ExecutionReport.h  FloorBase.h  FloorManager.cpp  FloorManager.h  PositionData.cpp  PositionManager.cpp  PositionManager.h  TPClient.h  exch_mock.cpp  floortap.cpp  flr.cpp
src/pm/test/: CMakeLists.txt  er_test.cpp  (+2 more)
(+545 files in other folders)
